qt/gen_qfiledialog.h

typedef struct QAbstractItemDelegate QAbstractItemDelegate;
typedef struct QAbstractProxyModel QAbstractProxyModel;
typedef struct QDir QDir;
typedef struct QFileDialog QFileDialog;
typedef struct QFileIconProvider QFileIconProvider;
typedef struct QMetaObject QMetaObject;
typedef struct QUrl QUrl;
typedef struct QWidget QWidget;
QFileDialog* QFileDialog_new(QWidget* parent);
QFileDialog* QFileDialog_new2(QWidget* parent, int f);
QFileDialog* QFileDialog_new3();
QFileDialog* QFileDialog_new4(QWidget* parent, struct miqt_string caption);
QFileDialog* QFileDialog_new5(QWidget* parent, struct miqt_string caption, struct miqt_string directory);
QFileDialog* QFileDialog_new6(QWidget* parent, struct miqt_string caption, struct miqt_string directory, struct miqt_string filter);
QMetaObject* QFileDialog_metaObject(const QFileDialog* self);
void* QFileDialog_metacast(QFileDialog* self, const char* param1);
int QFileDialog_metacall(QFileDialog* self, int param1, int param2, void** param3);
struct miqt_string QFileDialog_tr(const char* s);
struct miqt_string QFileDialog_trUtf8(const char* s);
void QFileDialog_setDirectory(QFileDialog* self, struct miqt_string directory);
void QFileDialog_setDirectoryWithDirectory(QFileDialog* self, QDir* directory);
QDir* QFileDialog_directory(const QFileDialog* self);
void QFileDialog_setDirectoryUrl(QFileDialog* self, QUrl* directory);
QUrl* QFileDialog_directoryUrl(const QFileDialog* self);
void QFileDialog_selectFile(QFileDialog* self, struct miqt_string filename);
struct miqt_array /* of struct miqt_string */  QFileDialog_selectedFiles(const QFileDialog* self);
void QFileDialog_selectUrl(QFileDialog* self, QUrl* url);
struct miqt_array /* of QUrl* */  QFileDialog_selectedUrls(const QFileDialog* self);
void QFileDialog_setNameFilterDetailsVisible(QFileDialog* self, bool enabled);
bool QFileDialog_isNameFilterDetailsVisible(const QFileDialog* self);
void QFileDialog_setNameFilter(QFileDialog* self, struct miqt_string filter);
void QFileDialog_setNameFilters(QFileDialog* self, struct miqt_array /* of struct miqt_string */  filters);
struct miqt_array /* of struct miqt_string */  QFileDialog_nameFilters(const QFileDialog* self);
void QFileDialog_selectNameFilter(QFileDialog* self, struct miqt_string filter);
struct miqt_string QFileDialog_selectedMimeTypeFilter(const QFileDialog* self);
struct miqt_string QFileDialog_selectedNameFilter(const QFileDialog* self);
void QFileDialog_setMimeTypeFilters(QFileDialog* self, struct miqt_array /* of struct miqt_string */  filters);
struct miqt_array /* of struct miqt_string */  QFileDialog_mimeTypeFilters(const QFileDialog* self);
void QFileDialog_selectMimeTypeFilter(QFileDialog* self, struct miqt_string filter);
int QFileDialog_filter(const QFileDialog* self);
void QFileDialog_setFilter(QFileDialog* self, int filters);
void QFileDialog_setViewMode(QFileDialog* self, int mode);
int QFileDialog_viewMode(const QFileDialog* self);
void QFileDialog_setFileMode(QFileDialog* self, int mode);
int QFileDialog_fileMode(const QFileDialog* self);
void QFileDialog_setAcceptMode(QFileDialog* self, int mode);
int QFileDialog_acceptMode(const QFileDialog* self);
void QFileDialog_setReadOnly(QFileDialog* self, bool enabled);
bool QFileDialog_isReadOnly(const QFileDialog* self);
void QFileDialog_setResolveSymlinks(QFileDialog* self, bool enabled);
bool QFileDialog_resolveSymlinks(const QFileDialog* self);
void QFileDialog_setSidebarUrls(QFileDialog* self, struct miqt_array /* of QUrl* */  urls);
struct miqt_array /* of QUrl* */  QFileDialog_sidebarUrls(const QFileDialog* self);
struct miqt_string QFileDialog_saveState(const QFileDialog* self);
bool QFileDialog_restoreState(QFileDialog* self, struct miqt_string state);
void QFileDialog_setConfirmOverwrite(QFileDialog* self, bool enabled);
bool QFileDialog_confirmOverwrite(const QFileDialog* self);
void QFileDialog_setDefaultSuffix(QFileDialog* self, struct miqt_string suffix);
struct miqt_string QFileDialog_defaultSuffix(const QFileDialog* self);
void QFileDialog_setHistory(QFileDialog* self, struct miqt_array /* of struct miqt_string */  paths);
struct miqt_array /* of struct miqt_string */  QFileDialog_history(const QFileDialog* self);
void QFileDialog_setItemDelegate(QFileDialog* self, QAbstractItemDelegate* delegate);
QAbstractItemDelegate* QFileDialog_itemDelegate(const QFileDialog* self);
void QFileDialog_setIconProvider(QFileDialog* self, QFileIconProvider* provider);
QFileIconProvider* QFileDialog_iconProvider(const QFileDialog* self);
void QFileDialog_setLabelText(QFileDialog* self, int label, struct miqt_string text);
struct miqt_string QFileDialog_labelText(const QFileDialog* self, int label);
void QFileDialog_setSupportedSchemes(QFileDialog* self, struct miqt_array /* of struct miqt_string */  schemes);
struct miqt_array /* of struct miqt_string */  QFileDialog_supportedSchemes(const QFileDialog* self);
void QFileDialog_setProxyModel(QFileDialog* self, QAbstractProxyModel* model);
QAbstractProxyModel* QFileDialog_proxyModel(const QFileDialog* self);
void QFileDialog_setOption(QFileDialog* self, int option);
bool QFileDialog_testOption(const QFileDialog* self, int option);
void QFileDialog_setOptions(QFileDialog* self, int options);
int QFileDialog_options(const QFileDialog* self);
void QFileDialog_setVisible(QFileDialog* self, bool visible);
void QFileDialog_fileSelected(QFileDialog* self, struct miqt_string file);
void QFileDialog_connect_fileSelected(QFileDialog* self, intptr_t slot);
void QFileDialog_filesSelected(QFileDialog* self, struct miqt_array /* of struct miqt_string */  files);
void QFileDialog_connect_filesSelected(QFileDialog* self, intptr_t slot);
void QFileDialog_currentChanged(QFileDialog* self, struct miqt_string path);
void QFileDialog_connect_currentChanged(QFileDialog* self, intptr_t slot);
void QFileDialog_directoryEntered(QFileDialog* self, struct miqt_string directory);
void QFileDialog_connect_directoryEntered(QFileDialog* self, intptr_t slot);
void QFileDialog_urlSelected(QFileDialog* self, QUrl* url);
void QFileDialog_connect_urlSelected(QFileDialog* self, intptr_t slot);
void QFileDialog_urlsSelected(QFileDialog* self, struct miqt_array /* of QUrl* */  urls);
void QFileDialog_connect_urlsSelected(QFileDialog* self, intptr_t slot);
void QFileDialog_currentUrlChanged(QFileDialog* self, QUrl* url);
void QFileDialog_connect_currentUrlChanged(QFileDialog* self, intptr_t slot);
void QFileDialog_directoryUrlEntered(QFileDialog* self, QUrl* directory);
void QFileDialog_connect_directoryUrlEntered(QFileDialog* self, intptr_t slot);
void QFileDialog_filterSelected(QFileDialog* self, struct miqt_string filter);
void QFileDialog_connect_filterSelected(QFileDialog* self, intptr_t slot);
struct miqt_string QFileDialog_getOpenFileName();
QUrl* QFileDialog_getOpenFileUrl();
struct miqt_string QFileDialog_getSaveFileName();
QUrl* QFileDialog_getSaveFileUrl();
struct miqt_string QFileDialog_getExistingDirectory();
QUrl* QFileDialog_getExistingDirectoryUrl();
struct miqt_array /* of struct miqt_string */  QFileDialog_getOpenFileNames();
struct miqt_array /* of QUrl* */  QFileDialog_getOpenFileUrls();
void QFileDialog_saveFileContent(struct miqt_string fileContent, struct miqt_string fileNameHint);
struct miqt_string QFileDialog_tr2(const char* s, const char* c);
struct miqt_string QFileDialog_tr3(const char* s, const char* c, int n);
struct miqt_string QFileDialog_trUtf82(const char* s, const char* c);
struct miqt_string QFileDialog_trUtf83(const char* s, const char* c, int n);
void QFileDialog_setOption2(QFileDialog* self, int option, bool on);
struct miqt_string QFileDialog_getOpenFileName1(QWidget* parent);
struct miqt_string QFileDialog_getOpenFileName2(QWidget* parent, struct miqt_string caption);
struct miqt_string QFileDialog_getOpenFileName3(QWidget* parent, struct miqt_string caption, struct miqt_string dir);
struct miqt_string QFileDialog_getOpenFileName4(QWidget* parent, struct miqt_string caption, struct miqt_string dir, struct miqt_string filter);
QUrl* QFileDialog_getOpenFileUrl1(QWidget* parent);