qt/gen_qfiledialog.nim


proc fcQFileDialog_new(parent: pointer): ptr cQFileDialog {.importc: "QFileDialog_new".}
proc fcQFileDialog_new2(parent: pointer, f: cint): ptr cQFileDialog {.importc: "QFileDialog_new2".}
proc fcQFileDialog_new3(): ptr cQFileDialog {.importc: "QFileDialog_new3".}
proc fcQFileDialog_new4(parent: pointer, caption: struct_miqt_string): ptr cQFileDialog {.importc: "QFileDialog_new4".}
proc fcQFileDialog_new5(parent: pointer, caption: struct_miqt_string, directory: struct_miqt_string): ptr cQFileDialog {.importc: "QFileDialog_new5".}
proc fcQFileDialog_new6(parent: pointer, caption: struct_miqt_string, directory: struct_miqt_string, filter: struct_miqt_string): ptr cQFileDialog {.importc: "QFileDialog_new6".}
proc fcQFileDialog_metaObject(self: pointer, ): pointer {.importc: "QFileDialog_metaObject".}
proc fcQFileDialog_metacast(self: pointer, param1: cstring): pointer {.importc: "QFileDialog_metacast".}
proc fcQFileDialog_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QFileDialog_metacall".}
proc fcQFileDialog_tr(s: cstring): struct_miqt_string {.importc: "QFileDialog_tr".}
proc fcQFileDialog_trUtf8(s: cstring): struct_miqt_string {.importc: "QFileDialog_trUtf8".}
proc fcQFileDialog_setDirectory(self: pointer, directory: struct_miqt_string): void {.importc: "QFileDialog_setDirectory".}
proc fcQFileDialog_setDirectoryWithDirectory(self: pointer, directory: pointer): void {.importc: "QFileDialog_setDirectoryWithDirectory".}
proc fcQFileDialog_directory(self: pointer, ): pointer {.importc: "QFileDialog_directory".}
proc fcQFileDialog_setDirectoryUrl(self: pointer, directory: pointer): void {.importc: "QFileDialog_setDirectoryUrl".}
proc fcQFileDialog_directoryUrl(self: pointer, ): pointer {.importc: "QFileDialog_directoryUrl".}
proc fcQFileDialog_selectFile(self: pointer, filename: struct_miqt_string): void {.importc: "QFileDialog_selectFile".}
proc fcQFileDialog_selectedFiles(self: pointer, ): struct_miqt_array {.importc: "QFileDialog_selectedFiles".}
proc fcQFileDialog_selectUrl(self: pointer, url: pointer): void {.importc: "QFileDialog_selectUrl".}
proc fcQFileDialog_selectedUrls(self: pointer, ): struct_miqt_array {.importc: "QFileDialog_selectedUrls".}
proc fcQFileDialog_setNameFilterDetailsVisible(self: pointer, enabled: bool): void {.importc: "QFileDialog_setNameFilterDetailsVisible".}
proc fcQFileDialog_isNameFilterDetailsVisible(self: pointer, ): bool {.importc: "QFileDialog_isNameFilterDetailsVisible".}
proc fcQFileDialog_setNameFilter(self: pointer, filter: struct_miqt_string): void {.importc: "QFileDialog_setNameFilter".}
proc fcQFileDialog_setNameFilters(self: pointer, filters: struct_miqt_array): void {.importc: "QFileDialog_setNameFilters".}
proc fcQFileDialog_nameFilters(self: pointer, ): struct_miqt_array {.importc: "QFileDialog_nameFilters".}
proc fcQFileDialog_selectNameFilter(self: pointer, filter: struct_miqt_string): void {.importc: "QFileDialog_selectNameFilter".}
proc fcQFileDialog_selectedMimeTypeFilter(self: pointer, ): struct_miqt_string {.importc: "QFileDialog_selectedMimeTypeFilter".}
proc fcQFileDialog_selectedNameFilter(self: pointer, ): struct_miqt_string {.importc: "QFileDialog_selectedNameFilter".}
proc fcQFileDialog_setMimeTypeFilters(self: pointer, filters: struct_miqt_array): void {.importc: "QFileDialog_setMimeTypeFilters".}
proc fcQFileDialog_mimeTypeFilters(self: pointer, ): struct_miqt_array {.importc: "QFileDialog_mimeTypeFilters".}
proc fcQFileDialog_selectMimeTypeFilter(self: pointer, filter: struct_miqt_string): void {.importc: "QFileDialog_selectMimeTypeFilter".}
proc fcQFileDialog_filter(self: pointer, ): cint {.importc: "QFileDialog_filter".}
proc fcQFileDialog_setFilter(self: pointer, filters: cint): void {.importc: "QFileDialog_setFilter".}
proc fcQFileDialog_setViewMode(self: pointer, mode: cint): void {.importc: "QFileDialog_setViewMode".}
proc fcQFileDialog_viewMode(self: pointer, ): cint {.importc: "QFileDialog_viewMode".}
proc fcQFileDialog_setFileMode(self: pointer, mode: cint): void {.importc: "QFileDialog_setFileMode".}
proc fcQFileDialog_fileMode(self: pointer, ): cint {.importc: "QFileDialog_fileMode".}
proc fcQFileDialog_setAcceptMode(self: pointer, mode: cint): void {.importc: "QFileDialog_setAcceptMode".}
proc fcQFileDialog_acceptMode(self: pointer, ): cint {.importc: "QFileDialog_acceptMode".}
proc fcQFileDialog_setReadOnly(self: pointer, enabled: bool): void {.importc: "QFileDialog_setReadOnly".}
proc fcQFileDialog_isReadOnly(self: pointer, ): bool {.importc: "QFileDialog_isReadOnly".}
proc fcQFileDialog_setResolveSymlinks(self: pointer, enabled: bool): void {.importc: "QFileDialog_setResolveSymlinks".}
proc fcQFileDialog_resolveSymlinks(self: pointer, ): bool {.importc: "QFileDialog_resolveSymlinks".}
proc fcQFileDialog_setSidebarUrls(self: pointer, urls: struct_miqt_array): void {.importc: "QFileDialog_setSidebarUrls".}
proc fcQFileDialog_sidebarUrls(self: pointer, ): struct_miqt_array {.importc: "QFileDialog_sidebarUrls".}
proc fcQFileDialog_saveState(self: pointer, ): struct_miqt_string {.importc: "QFileDialog_saveState".}
proc fcQFileDialog_restoreState(self: pointer, state: struct_miqt_string): bool {.importc: "QFileDialog_restoreState".}
proc fcQFileDialog_setConfirmOverwrite(self: pointer, enabled: bool): void {.importc: "QFileDialog_setConfirmOverwrite".}
proc fcQFileDialog_confirmOverwrite(self: pointer, ): bool {.importc: "QFileDialog_confirmOverwrite".}
proc fcQFileDialog_setDefaultSuffix(self: pointer, suffix: struct_miqt_string): void {.importc: "QFileDialog_setDefaultSuffix".}
proc fcQFileDialog_defaultSuffix(self: pointer, ): struct_miqt_string {.importc: "QFileDialog_defaultSuffix".}
proc fcQFileDialog_setHistory(self: pointer, paths: struct_miqt_array): void {.importc: "QFileDialog_setHistory".}
proc fcQFileDialog_history(self: pointer, ): struct_miqt_array {.importc: "QFileDialog_history".}
proc fcQFileDialog_setItemDelegate(self: pointer, delegate: pointer): void {.importc: "QFileDialog_setItemDelegate".}
proc fcQFileDialog_itemDelegate(self: pointer, ): pointer {.importc: "QFileDialog_itemDelegate".}
proc fcQFileDialog_setIconProvider(self: pointer, provider: pointer): void {.importc: "QFileDialog_setIconProvider".}
proc fcQFileDialog_iconProvider(self: pointer, ): pointer {.importc: "QFileDialog_iconProvider".}
proc fcQFileDialog_setLabelText(self: pointer, label: cint, text: struct_miqt_string): void {.importc: "QFileDialog_setLabelText".}
proc fcQFileDialog_labelText(self: pointer, label: cint): struct_miqt_string {.importc: "QFileDialog_labelText".}
proc fcQFileDialog_setSupportedSchemes(self: pointer, schemes: struct_miqt_array): void {.importc: "QFileDialog_setSupportedSchemes".}
proc fcQFileDialog_supportedSchemes(self: pointer, ): struct_miqt_array {.importc: "QFileDialog_supportedSchemes".}
proc fcQFileDialog_setProxyModel(self: pointer, model: pointer): void {.importc: "QFileDialog_setProxyModel".}
proc fcQFileDialog_proxyModel(self: pointer, ): pointer {.importc: "QFileDialog_proxyModel".}
proc fcQFileDialog_setOption(self: pointer, option: cint): void {.importc: "QFileDialog_setOption".}
proc fcQFileDialog_testOption(self: pointer, option: cint): bool {.importc: "QFileDialog_testOption".}
proc fcQFileDialog_setOptions(self: pointer, options: cint): void {.importc: "QFileDialog_setOptions".}
proc fcQFileDialog_options(self: pointer, ): cint {.importc: "QFileDialog_options".}
proc fcQFileDialog_setVisible(self: pointer, visible: bool): void {.importc: "QFileDialog_setVisible".}
proc fcQFileDialog_fileSelected(self: pointer, file: struct_miqt_string): void {.importc: "QFileDialog_fileSelected".}
proc fQFileDialog_connect_fileSelected(self: pointer, slot: int) {.importc: "QFileDialog_connect_fileSelected".}
proc fcQFileDialog_filesSelected(self: pointer, files: struct_miqt_array): void {.importc: "QFileDialog_filesSelected".}
proc fQFileDialog_connect_filesSelected(self: pointer, slot: int) {.importc: "QFileDialog_connect_filesSelected".}
proc fcQFileDialog_currentChanged(self: pointer, path: struct_miqt_string): void {.importc: "QFileDialog_currentChanged".}
proc fQFileDialog_connect_currentChanged(self: pointer, slot: int) {.importc: "QFileDialog_connect_currentChanged".}
proc fcQFileDialog_directoryEntered(self: pointer, directory: struct_miqt_string): void {.importc: "QFileDialog_directoryEntered".}
proc fQFileDialog_connect_directoryEntered(self: pointer, slot: int) {.importc: "QFileDialog_connect_directoryEntered".}
proc fcQFileDialog_urlSelected(self: pointer, url: pointer): void {.importc: "QFileDialog_urlSelected".}
proc fQFileDialog_connect_urlSelected(self: pointer, slot: int) {.importc: "QFileDialog_connect_urlSelected".}
proc fcQFileDialog_urlsSelected(self: pointer, urls: struct_miqt_array): void {.importc: "QFileDialog_urlsSelected".}
proc fQFileDialog_connect_urlsSelected(self: pointer, slot: int) {.importc: "QFileDialog_connect_urlsSelected".}
proc fcQFileDialog_currentUrlChanged(self: pointer, url: pointer): void {.importc: "QFileDialog_currentUrlChanged".}
proc fQFileDialog_connect_currentUrlChanged(self: pointer, slot: int) {.importc: "QFileDialog_connect_currentUrlChanged".}
proc fcQFileDialog_directoryUrlEntered(self: pointer, directory: pointer): void {.importc: "QFileDialog_directoryUrlEntered".}
proc fQFileDialog_connect_directoryUrlEntered(self: pointer, slot: int) {.importc: "QFileDialog_connect_directoryUrlEntered".}
proc fcQFileDialog_filterSelected(self: pointer, filter: struct_miqt_string): void {.importc: "QFileDialog_filterSelected".}
proc fQFileDialog_connect_filterSelected(self: pointer, slot: int) {.importc: "QFileDialog_connect_filterSelected".}
proc fcQFileDialog_getOpenFileName(): struct_miqt_string {.importc: "QFileDialog_getOpenFileName".}
proc fcQFileDialog_getOpenFileUrl(): pointer {.importc: "QFileDialog_getOpenFileUrl".}
proc fcQFileDialog_getSaveFileName(): struct_miqt_string {.importc: "QFileDialog_getSaveFileName".}
proc fcQFileDialog_getSaveFileUrl(): pointer {.importc: "QFileDialog_getSaveFileUrl".}
proc fcQFileDialog_getExistingDirectory(): struct_miqt_string {.importc: "QFileDialog_getExistingDirectory".}
proc fcQFileDialog_getExistingDirectoryUrl(): pointer {.importc: "QFileDialog_getExistingDirectoryUrl".}
proc fcQFileDialog_getOpenFileNames(): struct_miqt_array {.importc: "QFileDialog_getOpenFileNames".}
proc fcQFileDialog_getOpenFileUrls(): struct_miqt_array {.importc: "QFileDialog_getOpenFileUrls".}
proc fcQFileDialog_saveFileContent(fileContent: struct_miqt_string, fileNameHint: struct_miqt_string): void {.importc: "QFileDialog_saveFileContent".}
proc fcQFileDialog_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QFileDialog_tr2".}
proc fcQFileDialog_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QFileDialog_tr3".}
proc fcQFileDialog_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QFileDialog_trUtf82".}
proc fcQFileDialog_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QFileDialog_trUtf83".}
proc fcQFileDialog_setOption2(self: pointer, option: cint, on: bool): void {.importc: "QFileDialog_setOption2".}
proc fcQFileDialog_getOpenFileName1(parent: pointer): struct_miqt_string {.importc: "QFileDialog_getOpenFileName1".}
proc fcQFileDialog_getOpenFileName2(parent: pointer, caption: struct_miqt_string): struct_miqt_string {.importc: "QFileDialog_getOpenFileName2".}
proc fcQFileDialog_getOpenFileName3(parent: pointer, caption: struct_miqt_string, dir: struct_miqt_string): struct_miqt_string {.importc: "QFileDialog_getOpenFileName3".}
proc fcQFileDialog_getOpenFileName4(parent: pointer, caption: struct_miqt_string, dir: struct_miqt_string, filter: struct_miqt_string): struct_miqt_string {.importc: "QFileDialog_getOpenFileName4".}
proc fcQFileDialog_getOpenFileUrl1(parent: pointer): pointer {.importc: "QFileDialog_getOpenFileUrl1".}
